[release-1.14] Introduce a `ENABLE_VIRTUAL_THREADS` env variable to enable virtual threads, default to real threads for now (#3887)
* Fix profiler job

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

* Use async logger

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

* Use real threads for profiling job

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

* Info level logging for profiler job

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

* Format java

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

* Artifact log per event

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

* Enable virtual threads flag

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

* Use and handle consumer wakeup

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

* Allow closing consumer only once

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

---------

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>
Co-authored-by: Pierangelo Di Pilato <pierdipi@redhat.com>